feat: implement create a new product tag endpoint
