# backend/internal/model/product.go
@@ -6,6 +6,20 @@ import (
 	"github.com/google/uuid"
 )
 
+type Tag struct {
+	ID        uuid.UUID
+	Name      string
+	DeletedAt time.Time
+	CreatedAt time.Time
+	UpdatedAt time.Time
+}
+
+func NewTag(name string) *Tag {
+	return &Tag{
+		Name: name,
+	}
+}
+
 type Product struct {
 	ID               uuid.UUID
 	Title            string
